option to run from call_mtSNV (ie. skip alignment and steps before)

--- a/config/methods.config
+++ b/config/methods.config
@@ -63,34 +63,68 @@ methods {
         methods.set_input_type()
         params.input_channel_list = []
         params.purity = 1.0
-        params.input[params.input_type].each {
-            sample_type, sample ->
-            def entry_map = [
-                'sample_type': sample_type,
-                'sample_id': sample.sample_id,
-                'sample_data': sample.path,
-                'sample_index': methods.get_index_file(sample.path)
+
+    if (params.mtbam_given) {
+        // mtbam_given mode: convert directly to tuples
+        ['normal', 'tumor'].each { sample_type ->
+            def sample = params.input.BAM[sample_type]
+            if (sample) {
+                params.input_channel_list << [
+                    sample_type,                 // val(type)
+                    sample.sample_id,           // val(sample_name)
+                    sample.path         // path(bam)
                 ]
-            params.input_channel_list.add(entry_map)
             }
-        // set sample mode
+        }
+        // set sample_mode and purity
         switch (params.input_channel_list.size()) {
             case 0:
                 log.error "No samples provided"
                 break
             case 1:
                 params.sample_mode = 'single'
-                params.sample_id = params.input_channel_list[0].sample_id
+                params.sample_id = params.input_channel_list[0][1] // sample_id
                 break
             case 2:
                 params.sample_mode = 'paired'
-                params.sample_id = params.input_channel_list.find({ it.sample_type == 'tumor' }).sample_id
-                params.purity = params.input[params.input_type].tumor.purity
+                params.sample_id = params.input.BAM.tumor.sample_id
+                params.purity = params.input.BAM.tumor.purity
                 break
-            }
+        }
 
-        params.input_list = params.input_channel_list.collect{ tuple -> tuple.values() }
-        params.validation_list =params.input_channel_list.collect { tuple -> [tuple.sample_data, tuple.sample_index] }
+        // save as input list for nextflow channel
+        params.input_list = params.input_channel_list
+
+    }  else {
+            params.input[params.input_type].each {
+                sample_type, sample ->
+                def entry_map = [
+                    'sample_type': sample_type,
+                    'sample_id': sample.sample_id,
+                    'sample_data': sample.path,
+                    'sample_index': methods.get_index_file(sample.path)
+                    ]
+                params.input_channel_list.add(entry_map)
+                }
+            // set sample mode
+            switch (params.input_channel_list.size()) {
+                case 0:
+                    log.error "No samples provided"
+                    break
+                case 1:
+                    params.sample_mode = 'single'
+                    params.sample_id = params.input_channel_list[0].sample_id
+                    break
+                case 2:
+                    params.sample_mode = 'paired'
+                    params.sample_id = params.input_channel_list.find({ it.sample_type == 'tumor' }).sample_id
+                    params.purity = params.input[params.input_type].tumor.purity
+                    break
+                }
+
+            params.input_list = params.input_channel_list.collect{ tuple -> tuple.values() }
+            params.validation_list =params.input_channel_list.collect { tuple -> [tuple.sample_data, tuple.sample_index] }
+        }
         // create info string for log
         params.input_string = ''
         params.input[params.input_type].each {
