--- a/config/template.config
+++ b/config/template.config
@@ -25,6 +25,9 @@ params {
     downsample_strategy = 'HighAccuracy' // options: ['HighAccuracy', 'ConstantMemory', 'Chained']
     downsample_accuracy = "1.0E-4"
 
+    // Do the paths given under BAM in input.yaml refer to MToolBox output BAM paths
+    // If yes, skip all steps before call_mtSNV (ie. extract_mtDNA and align_mtDNA)
+    mtbam_given = false
 
     reference_genome_version = '' // options: ['GRCh37', 'GRCh38']
     // Path to the reference FASTA used to compress the CRAM
