--- a/config/methods.config
+++ b/config/methods.config
@@ -151,7 +151,7 @@ methods {
         schema.validate()
         methods.set_resources_allocation()
         methods.modify_base_allocations()
-        methods.setup_docker_cpus()
+        methods.configure_containerization()
         retry.setup_retry()
         methods.prepare_input()
         methods.setup_mtDNA_extraction()
