--- a/config/methods.config
+++ b/config/methods.config
@@ -23,7 +23,7 @@ methods {
             params.input_type = 'CRAM'
             params.validate_extra_args = "-r ${params.cram_reference_genome}"
 
-            def cram_reference_mount_path = "--volume ${Nextflow.file(params.cram_reference_genome).getParent()}:${Nextflow.file(params.cram_reference_genome).getParent()}"
+            def cram_reference_mount_path = "${params.container_mount_flag} ${Nextflow.file(params.cram_reference_genome).getParent()}:${Nextflow.file(params.cram_reference_genome).getParent()}"
 
             process['withName:validate_input:run_validate_PipeVal'].ext.containerOptions = cram_reference_mount_path
         }
