Add check for purity in config

--- a/config/methods.config
+++ b/config/methods.config
@@ -85,7 +85,9 @@ methods {
             case 2:
                 params.sample_mode = 'paired'
                 params.sample_id = params.input_channel_list.find({ it.sample_type == 'tumor' }).sample_id
-                params.purity = params.input[params.input_type].tumor.purity
+                if (params.input[params.input_type].tumor.containsKey('purity')) {
+                    params.purity = params.input[params.input_type].tumor.purity
+                }
                 break
             }
 
